--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,8 @@
       "sizes": "512x512"
     }
   ],
+  "web_accessible_resources": [
+  ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
